[REFACT][MAIN] Atualiza PCEP_PE1_MODULO2.ipynb

--- a/PCEP_PE1_MODULO2.ipynb
+++ b/PCEP_PE1_MODULO2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJXR+O3vRpOInBwKo821nE",
+      "authorship_tag": "ABX9TyPeAVGzQJpG44E8BX/OFAJ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -111,11 +111,186 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Inteiro é um tipo de dados desprovido de partes fracionárias."
+        "Inteiro é um tipo de dados desprovido de partes fracionárias, podendo ser tanto negativo quanto positivo. A linguagem permite escrever um inteiro no formato octal, hexadecimal e literais binários."
       ],
       "metadata": {
         "id": "mJ81_041iVDB"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(11111111)\n",
+        "print(11_111_111) # O recurso de underscore em números inteiros foi introduzido no Python 3.6"
+      ],
+      "metadata": {
+        "id": "uiHZcIz1gH0J",
+        "outputId": "2d72c4ee-04ff-4a34-f4ac-1623eda33d4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11111111\n",
+            "11111111\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se um valor interiro for precedido por um prefixo 0o ou 0O, será tratado como um valor octal. Dessa forma, o intervalo limite será entre 0 e 7."
+      ],
+      "metadata": {
+        "id": "KTfQXEV5iKLh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(0o123)\n",
+        "print(0O123)"
+      ],
+      "metadata": {
+        "id": "BOblHPLepApV",
+        "outputId": "3dbbd4e3-c024-49ed-cc69-8ef6efb3aadb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "83\n",
+            "83\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se o valor inteiro for precediro pelo prefixo 0x ou 0X (zero-x), será então hexadecimal."
+      ],
+      "metadata": {
+        "id": "T1XGiL5FpFW4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(0xFF)\n",
+        "print(0x123)"
+      ],
+      "metadata": {
+        "id": "Rk6XGY_YpPNy",
+        "outputId": "1eb44634-f090-49f4-ad36-13b791f12313",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "255\n",
+            "291\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Float"
+      ],
+      "metadata": {
+        "id": "slxHRvBR4aHG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Valores float possuem (ou podem possuir) uma parte fracionária após o ponto decimal. Este tipo de dados foi projetado para representar e armazenar números que posuam valores fracionários não-vazios.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "r1Pfq9AQ48b3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(2.5)\n",
+        "print(-0.4)"
+      ],
+      "metadata": {
+        "id": "pBBeS7xi6hA8",
+        "outputId": "35dccef1-d5f7-4c23-a0f7-d6e5e0a270c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5\n",
+            "-0.4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "É possível escrever um valor decimal da forma tradicional ou, simplesmente, omitir o zero antes ou depois do ponto decimal, como no exemplo abaixo:"
+      ],
+      "metadata": {
+        "id": "V7UhyLPl6lCy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(0.4)\n",
+        "print(.4)\n",
+        "print(4.0)\n",
+        "print(4.)"
+      ],
+      "metadata": {
+        "id": "vuwKPSNL5OEs",
+        "outputId": "420d0fb6-c559-4e40-ad16-dd2f4bf432c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.4\n",
+            "0.4\n",
+            "4.0\n",
+            "4.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
