[REFACT][MAIN] Atualiza PCEP_PE1_MODULO2.ipynb

--- a/PCEP_PE1_MODULO2.ipynb
+++ b/PCEP_PE1_MODULO2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeAVGzQJpG44E8BX/OFAJ8",
+      "authorship_tag": "ABX9TyOYjeIwu2fQvPJ+WwVjIr4Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Literals"
+        "## **Literals**"
       ],
       "metadata": {
         "id": "lYXJHzEfeOkJ"
@@ -60,7 +60,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Literal é um dado cujos valores são determinados pela literal em sí, ou seja, 123 é 123, já o caractere c pode ser qualquer coisa, sendo assim não literal. É utilizado para codificar dados e colocá-los no código.\n",
+        "Literal é uma notação para representar alguns valores fixos no código.É um dado cujos valores são determinados pela literal em sí, ou seja, 123 é 123, já o caractere c pode ser qualquer coisa, sendo assim não literal. É utilizado para codificar dados e colocá-los no código.\n",
         "\n"
       ],
       "metadata": {
@@ -102,7 +102,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Inteiros"
+        "### **Inteiros**"
       ],
       "metadata": {
         "id": "OeRg1qcziTNY"
@@ -124,11 +124,11 @@
         "print(11_111_111) # O recurso de underscore em números inteiros foi introduzido no Python 3.6"
       ],
       "metadata": {
-        "id": "uiHZcIz1gH0J",
-        "outputId": "2d72c4ee-04ff-4a34-f4ac-1623eda33d4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uiHZcIz1gH0J",
+        "outputId": "2d72c4ee-04ff-4a34-f4ac-1623eda33d4a"
       },
       "execution_count": 2,
       "outputs": [
@@ -158,11 +158,11 @@
         "print(0O123)"
       ],
       "metadata": {
-        "id": "BOblHPLepApV",
-        "outputId": "3dbbd4e3-c024-49ed-cc69-8ef6efb3aadb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BOblHPLepApV",
+        "outputId": "3dbbd4e3-c024-49ed-cc69-8ef6efb3aadb"
       },
       "execution_count": 4,
       "outputs": [
@@ -192,11 +192,11 @@
         "print(0x123)"
       ],
       "metadata": {
-        "id": "Rk6XGY_YpPNy",
-        "outputId": "1eb44634-f090-49f4-ad36-13b791f12313",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Rk6XGY_YpPNy",
+        "outputId": "1eb44634-f090-49f4-ad36-13b791f12313"
       },
       "execution_count": 6,
       "outputs": [
@@ -213,7 +213,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Float"
+        "### **Float**"
       ],
       "metadata": {
         "id": "slxHRvBR4aHG"
@@ -236,11 +236,11 @@
         "print(-0.4)"
       ],
       "metadata": {
-        "id": "pBBeS7xi6hA8",
-        "outputId": "35dccef1-d5f7-4c23-a0f7-d6e5e0a270c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pBBeS7xi6hA8",
+        "outputId": "35dccef1-d5f7-4c23-a0f7-d6e5e0a270c3"
       },
       "execution_count": 9,
       "outputs": [
@@ -272,11 +272,11 @@
         "print(4.)"
       ],
       "metadata": {
-        "id": "vuwKPSNL5OEs",
-        "outputId": "420d0fb6-c559-4e40-ad16-dd2f4bf432c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vuwKPSNL5OEs",
+        "outputId": "420d0fb6-c559-4e40-ad16-dd2f4bf432c5"
       },
       "execution_count": 10,
       "outputs": [
@@ -291,6 +291,187 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Não é apenas o ponto decimal que transforma um número em float. Para números maiores é possível utilizar o caracterere \"e\", tanto maiúsculo quanto minúsculo. Tal caractere é utilizado em notações científicas envolvendo números muito grande ou muito pequeno."
+      ],
+      "metadata": {
+        "id": "vZMOEKRn9Tdn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(2e5)\n",
+        "print(2E5)\n",
+        "print(2.0E5)\n",
+        "print(6.62607E-34)\n",
+        "print(0.0000000000000000000001) # A linguagem Python sempre escolhe a forma mais econômica de apresentar os números. É necessário levar isso em consideração ao criar literais"
+      ],
+      "metadata": {
+        "id": "gf1bAqFT8hV7",
+        "outputId": "37e4e87d-3783-449a-d8b2-36b2931d3a69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "200000.0\n",
+            "200000.0\n",
+            "200000.0\n",
+            "6.62607e-34\n",
+            "1e-22\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Strings**"
+      ],
+      "metadata": {
+        "id": "dl5Vcjp58MBW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Utilizado para processar texto, não números, precisa de aspas da mesma forma que os valores float precisam de pontos."
+      ],
+      "metadata": {
+        "id": "0eX6eSdq_Jfx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"I am a string.\")\n",
+        "\n",
+        "# Se precisa colocar aspas duplas dentro de uma string já delimitado por aspas duplas\n",
+        "print(\"I like \\\"Monty Python\\\"\")\n",
+        "\n",
+        "# Como alternativa, utilizar apóstrofos em vez de aspas, para inserir palavras ou caracteres com aspas dentro da string.\n",
+        "print('I like \"Monty Python\"')\n",
+        "\n",
+        "# Para o inverso, ou seja, apóstrofo dentro de aspas\n",
+        "print(\"I'm Monty Python\")\n",
+        "print(\"I\\'m Monty Python\")"
+      ],
+      "metadata": {
+        "id": "oQlKJL4TAgOG",
+        "outputId": "eaff165b-c25c-4ced-ba0d-ba7d093c643d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I am a string.\n",
+            "I like \"Monty Python\"\n",
+            "I like \"Monty Python\"\n",
+            "I'm Monty Python\n",
+            "I'm Monty Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Boolean**"
+      ],
+      "metadata": {
+        "id": "lqWeIMMBBdAf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O valor booleano é utilizado para representar a veracidade de um valor, como por exemplo se um número é maior que outro.\n",
+        "\n",
+        "Os valores booleanos possuem apenas dois valores distintos: True ou False, denotado também como 1 e 0."
+      ],
+      "metadata": {
+        "id": "bEYN5U4xB1iV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(True > False)\n",
+        "print(True < False)"
+      ],
+      "metadata": {
+        "id": "gEJxQmeYCO-N",
+        "outputId": "48c59b7d-98b5-4e92-ae21-2c9e39819348",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **None**"
+      ],
+      "metadata": {
+        "id": "nNgQx8P8GA9Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "None é um tipo de dados objeto NoneType utilizado para representar a ausência de um valor."
+      ],
+      "metadata": {
+        "id": "4QDcCcMqGCNA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Operadores aritméticos**"
+      ],
+      "metadata": {
+        "id": "0uBllflaHYls"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "G8GlzatjHfks"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "BSgjc8L3HeT8"
+      }
     },
     {
       "cell_type": "markdown",
