[REFACT][MAIN] - Atualiza PCEP_PE1_MODULO2.ipynb

--- a/PCEP_PE1_MODULO2.ipynb
+++ b/PCEP_PE1_MODULO2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYjeIwu2fQvPJ+WwVjIr4Y",
+      "authorship_tag": "ABX9TyNcyFltW1KovoC7IBZbF62w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -311,11 +311,11 @@
         "print(0.0000000000000000000001) # A linguagem Python sempre escolhe a forma mais econômica de apresentar os números. É necessário levar isso em consideração ao criar literais"
       ],
       "metadata": {
-        "id": "gf1bAqFT8hV7",
-        "outputId": "37e4e87d-3783-449a-d8b2-36b2931d3a69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gf1bAqFT8hV7",
+        "outputId": "37e4e87d-3783-449a-d8b2-36b2931d3a69"
       },
       "execution_count": 16,
       "outputs": [
@@ -366,11 +366,11 @@
         "print(\"I\\'m Monty Python\")"
       ],
       "metadata": {
-        "id": "oQlKJL4TAgOG",
-        "outputId": "eaff165b-c25c-4ced-ba0d-ba7d093c643d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oQlKJL4TAgOG",
+        "outputId": "eaff165b-c25c-4ced-ba0d-ba7d093c643d"
       },
       "execution_count": 20,
       "outputs": [
@@ -414,11 +414,11 @@
         "print(True < False)"
       ],
       "metadata": {
-        "id": "gEJxQmeYCO-N",
-        "outputId": "48c59b7d-98b5-4e92-ae21-2c9e39819348",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gEJxQmeYCO-N",
+        "outputId": "48c59b7d-98b5-4e92-ae21-2c9e39819348"
       },
       "execution_count": 21,
       "outputs": [
@@ -463,15 +463,31 @@
       "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "G8GlzatjHfks"
+        "id": "Gwt65suiIR2c"
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "print(2+2)"
+      ],
       "metadata": {
-        "id": "BSgjc8L3HeT8"
-      }
+        "id": "LVNi5yWHISXc",
+        "outputId": "f40a9d93-0313-4d09-a258-c47a80568e75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
