refact : Adiciona Operadores aritméticos

--- a/PCEP_PE1_MODULO2.ipynb
+++ b/PCEP_PE1_MODULO2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcyFltW1KovoC7IBZbF62w",
+      "authorship_tag": "ABX9TyPBLwImVlsArFt0cLTe0uZf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +130,7 @@
         "id": "uiHZcIz1gH0J",
         "outputId": "2d72c4ee-04ff-4a34-f4ac-1623eda33d4a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "BOblHPLepApV",
         "outputId": "3dbbd4e3-c024-49ed-cc69-8ef6efb3aadb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,7 @@
         "id": "Rk6XGY_YpPNy",
         "outputId": "1eb44634-f090-49f4-ad36-13b791f12313"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +242,7 @@
         "id": "pBBeS7xi6hA8",
         "outputId": "35dccef1-d5f7-4c23-a0f7-d6e5e0a270c3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
         "id": "vuwKPSNL5OEs",
         "outputId": "420d0fb6-c559-4e40-ad16-dd2f4bf432c5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +317,7 @@
         "id": "gf1bAqFT8hV7",
         "outputId": "37e4e87d-3783-449a-d8b2-36b2931d3a69"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +372,7 @@
         "id": "oQlKJL4TAgOG",
         "outputId": "eaff165b-c25c-4ced-ba0d-ba7d093c643d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
         "id": "gEJxQmeYCO-N",
         "outputId": "48c59b7d-98b5-4e92-ae21-2c9e39819348"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,30 +461,107 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Utiliza-se operadores para operar os valores."
+      ],
       "metadata": {
-        "id": "Gwt65suiIR2c"
+        "id": "37DjbQA2aPJh"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "print(2+2)"
+        "# Exponenciação\n",
+        "print(2 ** 3)\n",
+        "print(2 ** 3.)\n",
+        "print(2. ** 3) # Se um dos argumentos for float, o resultado será float.\n",
+        "print(2. ** 3.)\n",
+        "\n",
+        "# Multiplicação\n",
+        "print(2 * 3)\n",
+        "print(2 * 3.) # Se um dos argumentos for float, o resultado será float.\n",
+        "print(2. * 3) # Se um dos argumentos for float, o resultado será float.\n",
+        "print(2. * 3.)\n",
+        "\n",
+        "# Divisão\n",
+        "print(6 / 3) # Mesmo os dois números sendo inteiros, o resultado será float.\n",
+        "print(6 / 3.)\n",
+        "print(6. / 3)\n",
+        "print(6. / 3.)\n",
+        "\n",
+        "# Divisão de inteiros\n",
+        "# A divisão inteira também pode ser chamada de floor division.\n",
+        "print(6 // 3) # Se ambos os números forem inteiros e o resultado não for fracionado, será inteiro também (Arreondado para o menor inteiro)\n",
+        "print(6 // 3.) # Se um dos argumentos for float, o resultado será float.\n",
+        "print(6. // 3)\n",
+        "print(6. // 3.)\n",
+        "print(-6 // 4)\n",
+        "print(6. // -4)\n",
+        "\n",
+        "# Resto\n",
+        "\"\"\"\n",
+        "Realizar uma divisão por zero;\n",
+        "realizar uma divisão inteira por zero;\n",
+        "encontrar o resto de uma divisão por zero.\n",
+        "\"\"\"\n",
+        "print(14 % 4)\n",
+        "print(12 % 4.5)\n",
+        "\n",
+        "# Adição\n",
+        "print(-4 + 4)\n",
+        "print(-4. + 8)\n",
+        "print(-4 - 4)\n",
+        "print(4. - 8)\n",
+        "print(-1.1)\n",
+        "print(+2)\n",
+        "\n",
+        "# Ordem dos calculos\n",
+        "print(2 ** 2 ** 3) # Neste caso, right-sided binding.\n",
+        "print((5 * ((25 % 13) + 100) / (2 * 13)) // 2) # Subespressões em parênteses são sempre calculados primeiro\n",
+        "print(2 * 3 % 5)"
       ],
       "metadata": {
         "id": "LVNi5yWHISXc",
-        "outputId": "f40a9d93-0313-4d09-a258-c47a80568e75",
+        "outputId": "1ce47b05-f6a4-486e-b736-dae81bf7094c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4\n"
+            "8\n",
+            "8.0\n",
+            "8.0\n",
+            "8.0\n",
+            "6\n",
+            "6.0\n",
+            "6.0\n",
+            "6.0\n",
+            "2.0\n",
+            "2.0\n",
+            "2.0\n",
+            "2.0\n",
+            "2\n",
+            "2.0\n",
+            "2.0\n",
+            "2.0\n",
+            "-2\n",
+            "-2.0\n",
+            "2\n",
+            "3.0\n",
+            "0\n",
+            "4.0\n",
+            "-8\n",
+            "-4.0\n",
+            "-1.1\n",
+            "2\n",
+            "256\n",
+            "10.0\n",
+            "1\n"
           ]
         }
       ]
